manifest-redisconsumer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amorphie-workflow-redisconsumer
  namespace: amorphie-workflow-redisconsumer
spec:
  selector:
    matchLabels:
      app: amorphie-workflow-redisconsumer
  replicas: 1
  template:
    metadata:
      labels:
        app: amorphie-workflow-redisconsumer
      annotations:
        dapr.io/app-id: amorphie-workflow-redisconsumer
        dapr.io/enabled: 'true'
        dapr.io/app-port: '5000'
    spec:
      serviceAccountName: amorphie-workflow-redisconsumeruser
      containers:
        - name: amorphie-workflow-redisconsumer
          image: burganbank/amorphie.workflow-redisconsumer:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "4096Mi"
            requests:
              cpu: "0.1"
              memory: "64Mi"
          volumeMounts:
          - mountPath: /app/appsettings.Test.json
            name: appsettings-test-config-volume
            subPath: appsettings.Test.json
      volumes:
        - name: appsettings-test-config-volume
          configMap:
            name: appsettings-test-config
