manifest-redisconsumer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-workflow-redisconsumer
  namespace: amorphie-workflow-redisconsumer
spec:
  selector: 
    app: amorphie-workflow-redisconsumer
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
